Minor optimization.